Stopped main title text from wrapping around

--- a/style.css
+++ b/style.css
@@ -96,48 +96,21 @@ button:hover {
     color: white;
   }
 
-button1 {
-    background-color: blue;
-    border: none;
-    color: rgb(160, 189, 32);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-
-button1:hover {
-    background-color: #34bdbd;
-    color: black;
-  }
-
-  button2 {
-    background-color: rgb(41, 220, 38);
-    border: none;
-    color: rgb(0, 0, 0);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-button2:hover {
-    background-color: #bd4f34;
-    color: rgb(255, 255, 255);
-  }
-
 /* Mobile settings */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 850px) {
 sidenav {
     width: 100%;
     height: auto;
     position: relative;
 }
 
+.sidenav-alignment{
+    width: 100%;
+}
+
 #main {
     background: rgb(189, 180, 180);
-    width: 100%;
+    width: 92.5%;
     position: relative;
     float: centre;
     top: 0;
@@ -150,7 +123,8 @@ sidenav {
     font-family: 'Helvetica Neue', sans-serif;
     color: white;
     background-color: #333;
-    font-size: 150%; 
+    font-size: 200%;
+    font-size-adjust: none;
     font-weight: 100; 
     line-height: 20px; 
     letter-spacing: 1px; 
@@ -159,6 +133,8 @@ sidenav {
     border: 2px solid darkgray;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 0.5px;
+    min-width: 500px;
+    white-space: normal;
 }
 
 
